--- a/core/static/core/less/tempora.less
+++ b/core/static/core/less/tempora.less
@@ -115,6 +115,7 @@ aside.clients {
     background-color: white;
     border-color: fade(@gray-darker, 5%);
 	padding: 0 5px;
+
     .sans-serif-font;
     .transition-all;
     .navbar-header .navbar-brand {
@@ -126,12 +127,14 @@ aside.clients {
             color: darken(@theme-primary, 10%);
         }
     }
+
     .navbar-header .navbar-toggle {
         font-weight: 700;
         font-size: 12px;
         color: @gray-darker;
         text-transform: uppercase;
     }
+
     .nav {
         > li {
             > a, > a:focus {
@@ -139,14 +142,17 @@ aside.clients {
                 font-weight: 700;
                 font-size: 13px;
                 color: @gray-darker;
+
                 &:hover {
                     color: @theme-primary;
                 }
             }
+
             &.active {
                 > a, > a:focus {
                     color: @theme-primary !important;
                     background-color: transparent;
+
                     &:hover {
                         background-color: transparent;
                     }
@@ -154,29 +160,37 @@ aside.clients {
             }
         }
     }
+
+
     @media (min-width: 768px) {
 		padding: 0 15px;
         background-color: transparent;
         border-color: fade(white, 30%);
+
         .navbar-header .navbar-brand {
             color: fade(white, 70%);
 			text-shadow: 4px 4px 20px rgba(0, 0, 0, 0.6);
+
             &:hover, &:focus {
                 color: white;
             }
         }
+
         .nav > li > a,
         .nav > li > a:focus {
             color: fade(white, 70%);
 			text-shadow: 4px 4px 20px rgba(0, 0, 0, 0.6);
+
             &:hover {
                 color: white;
             }
         }
+
         &.affix {
             background-color: white;
             border-color: #A3112A;
 			border-width: 0 0 2px;
+
             .navbar-header .navbar-brand {
                 color: @theme-primary;
                 font-size: 14px;
@@ -185,6 +199,7 @@ aside.clients {
                     color: darken(@theme-primary, 10%);
                 }
             }
+
             .nav > li > a,
             .nav > li > a:focus {
                 color: @gray-darker;
@@ -194,12 +209,15 @@ aside.clients {
                 }
             }
         }
+
         &.navbar-page {
             border-color: @theme-primary;
             border-width: 0 0 2px;
         }
     }
 }
+
+
 // Homepage Header
 header {
     &.blog-header {
@@ -529,9 +547,14 @@ li {
 .dropdown {
 	font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-.pagination>li>a, .pagination>li>span,
-.pagination>li:first-child>a, .pagination>li:first-child>span,
-.pagination>li:last-child>a, .pagination>li:last-child>span {
+
+
+.pagination>li>a,
+.pagination>li>span,
+.pagination>li:first-child>a,
+.pagination>li:first-child>span,
+.pagination>li:last-child>a,
+.pagination>li:last-child>span {
     .btn-base(@theme-primary;
     @theme-primary;
     @theme-primary);
@@ -544,21 +567,28 @@ li {
 		padding: 5px 10px;
 	}
 }
-.pagination>.active>span, .pagination>.active>a,
-.pagination > li:first-child.active > a,
-.pagination > li:last-child > a {
+
+.pagination>.active>span,
+.pagination>.active>a,
+.pagination > li:first-child.active > a {
 	.btn-hover(@theme-primary; @theme-primary);
+
 	&:hover {
 		.btn-hover(darken(@theme-primary, 5%); darken(@theme-primary, 5%));
 	}
+
 	@media (max-width: 768px) {
 		margin: 2px;
 		padding: 5px 10px;
 	}
 }
+
+
 .btn-xl {
     padding: 15px 30px;
 }
+
+
 #top.btn {
     display: none;
     position: fixed;
@@ -1055,14 +1085,12 @@ body {
     padding-right: 0px !important;
 }
 
+
 .isbn_list {
 	display: block;
 	margin-left: 5rem;
 }
 
-img.bordered {
-	border: 2px solid #f6a4b2;
-}
 
 .filter-form {
 	.form-group {
@@ -1092,12 +1120,38 @@ img.bordered {
 		max-width: 320px;
 		margin-left: auto;
 		margin-right: auto;
-		margin-bottom: 0
+		margin-bottom: 0;
+
+		@media (max-width: 991px) {
+			max-width: 640px;
+			margin-bottom: 30px;
+		}
+
+		@media (max-width: 767px) {
+			max-width: 320px;
+			margin-bottom: 30px;
+		}
 	}
 
-	iframe {
-		border: none;
+	.aspect-ratio {
+		position: relative;
+		width: 100%;
+		height: 0;
+		padding-bottom: 56.25%;
+
+		iframe {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			left: 0;
+			top: 0;
+		}
 	}
+}
+
+
+iframe {
+	border: none;
 }
 
 
